# ComfyUI_Muse

./: .gitignore  LICENSE  README.md  __init__.py  install.py  pyproject.toml  requirements.txt
example_workflows/: basic_song_generation.json
mucodec/: generate.py  model.py
mucodec/tools/: get_melvaehifigan48k.py
util/: muse_pipeline.py
